sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:4: error: not found: value b
  b=false
  ^DutchFlagAlgo:6: error: not found: value bR
  bR= false
  ^DutchFlagAlgo:8: error: not found: value ab
  ab= false
  ^DutchFlagAlgo:9: error: not found: value estTrouve
  while(!estTrouve){
         ^DutchFlagAlgo:11: error: not found: value getNombreValeurs
  for(i<- 1 to getNombreValeurs()-1){
               ^DutchFlagAlgo:14: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if(getCouleur(i)= Color.BLUE){
       ^DutchFlagAlgo:22: error: missing arguments for method getCouleur in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if(getCouleur(i)= Color.WHITE){
       ^